@@ -53,12 +53,12 @@ public class InMemoryContentStore implements ContentStoreIF {
 
   @Override
   public boolean containsKey(int key) throws ContentStoreException {
-    return content.containsKey(new Integer(key));
+    return content.containsKey(key);
   }
 
   @Override
   public ContentInputStream get(int key) throws ContentStoreException {
-    byte[] data = content.get(new Integer(key));
+    byte[] data = content.get(key);
     if (data == null)
       throw new ContentStoreException("No content for key " + key);
     return new ContentInputStream(new ByteArrayInputStream(data), data.length);
@@ -81,7 +81,7 @@ public class InMemoryContentStore implements ContentStoreIF {
 
   @Override
   public boolean remove(int key) throws ContentStoreException {
-    Integer okey = new Integer(key);
+    Integer okey = Integer.valueOf(key);
     boolean result = content.containsKey(okey);
     content.remove(okey);
     return result;
